--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,42 +1,206 @@
+:root {
+  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  line-height: 1.5;
+  font-weight: 400;
+
+  color: black;
+  background-color:white;
+
+  font-synthesis: none;
+  text-rendering: optimizeLegibility;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
 #root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
+  width: 100vw;
+  margin: 0 0;
+  padding: 1rem 2rem;
+  display: flex;
   text-align: center;
+  flex-direction: column;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+body {
+  margin: 0;
+  display: flex;
+  place-items: start;
+  justify-content: center;
+  min-width: 320px;
+  min-height: 100vh;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
+h1 {
+  font-size: 3.2em;
+  line-height: 1.1;
+}
+
+h2{
+  font-family:"balboa";
+  font-weight: 200;
+  font-size: 2.5rem;
+  opacity: 0.2;
+  text-align: start;
+  margin-bottom: 0;
+}
+
+h3{
+  font-family:"balboa";
+  font-weight: 700;
+  font-size: 1rem;
+}
+
+
+header{
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+  font-family:"balboa";
+  font-weight: 700;
+  font-size: 1.5rem;
+  text-transform: uppercase;
+  
+}
+
+header a{
+  color: black;
+  text-decoration: none;
+}
+
+header #centerLinks{
+  display: flex;
+  justify-content: space-evenly;
+  width: 50%;
+}
+
+
+/* -------------- ADMIN DASHBOARD PAGE -------------- */
+
+@keyframes gradientAnimation {
+  0% {
+    background-position: 0% 50%;
   }
-  to {
-    transform: rotate(360deg);
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
   }
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+.constructionBanner{
+  margin-top: 50px;
+  width: 100%;
+  height: 1.5rem;
+  background-color: #FCEE21;
+  color: black;
+  position: relative;
 }
 
-.card {
-  padding: 2em;
+.constructionBanner::before,
+.constructionBanner::after {
+  content: "";
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+width: 100px;
+  height: 1.5rem;
+  background-size: contain;
+  background-repeat: no-repeat;
 }
 
-.read-the-docs {
+.constructionBanner::before {
+  left: 0; 
+  background-image: url('/constructionlines.svg'); /* Replace with your left image path */
+}
+
+.constructionBanner::after {
+  right: 0; 
+  transform: translateY(-50%) scaleX(-1);
+  background-image: url('/constructionlines.svg'); /* Replace with your right image path */
+}
+
+.user-table {
+  width: 100%;
+  border-collapse: collapse;
+  margin-top: 20px;
+  font-family:"balboa";
+  font-weight: 400;
+}
+
+.user-table th {
+  text-align: left;
+  padding: 10px;
+  font-size: 0.9rem;
+  font-weight: bold;
   color: #888;
+  border-bottom: 1px solid #e5e5e5;
+}
+
+.user-table th{
+  width: 100px;
+}
+
+#adminUserTable.user-table th:last-child{
+  visibility: hidden;
+}
+
+.user-table .highlightUser{
+  color: rgb(155, 138, 40);
+  border-bottom: 1px solid rgb(155, 138, 40);
+  border-top: 1px solid rgb(155, 138, 40);
+  /* background: linear-gradient(270deg, rgb(242, 243, 253), #f2e8f7, #e7f1f9, rgb(242, 243, 253));
+  background-size: 400% 400%;
+  animation: gradientAnimation 15s ease infinite; */
+}
+
+.user-table td:first-child{
+  text-align: left;
+}
+
+.user-table td {
+  padding: 10px;
+  font-size: 1.1rem;
+  font-weight: bold;
+  text-align: start;
+}
+
+.user-table td:last-child {
+display: flex;
+}
+
+.user-table input[type="text"],
+.user-table select {
+  max-width: 100px;
+  overflow: hidden;
+  width: 100%;
+  padding: 5px;
+  font-size: 1rem;
+  font-family: inherit;
+  border: 1px solid #000;
+  box-sizing: border-box;
+  background-color: #fff;
+  /* appearance: none; Removes the default dropdown styling */
+}
+
+.user-table select {
+  background-color: #fff;
+  cursor: pointer;
+}
+
+.register-circle {
+  width: 33px;
+  height: 33px;
+  border-radius: 50%;
+  background-color: lightgray;
+  display: inline-block;
+}
+
+.register-circle.check {
+  background-color: green;
+  background-image: url('check.svg');
+  background-size: 20px;
+  background-repeat: no-repeat;
+  background-position: center;
 }
