--- a/client/src/App.css
+++ b/client/src/App.css
@@ -121,6 +121,23 @@ width: 100px;
   background-image: url('/constructionlines.svg'); /* Replace with your right image path */
 }
 
+.addUsers{
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.addUsers button{
+  border: 1px solid black;
+  background-color: white;
+  border-radius: 0;
+  min-width: 80px;
+  font-size: 1.5rem;
+  font-family:"balboa";
+  font-weight: 400;
+}
+
 .user-table {
   width: 100%;
   border-collapse: collapse;
@@ -146,14 +163,14 @@ width: 100px;
   visibility: hidden;
 }
 
-.user-table .highlightUser{
+/* .user-table .highlightUser{
   color: rgb(155, 138, 40);
   border-bottom: 1px solid rgb(155, 138, 40);
   border-top: 1px solid rgb(155, 138, 40);
   /* background: linear-gradient(270deg, rgb(242, 243, 253), #f2e8f7, #e7f1f9, rgb(242, 243, 253));
   background-size: 400% 400%;
-  animation: gradientAnimation 15s ease infinite; */
-}
+  animation: gradientAnimation 15s ease infinite;
+} */
 
 .user-table td:first-child{
   text-align: left;
@@ -165,6 +182,8 @@ width: 100px;
   font-weight: bold;
   text-align: start;
 }
+
+
 
 .user-table td:last-child {
 display: flex;
@@ -183,6 +202,35 @@ display: flex;
   background-color: #fff;
   /* appearance: none; Removes the default dropdown styling */
 }
+
+.user-table td .yearGroup{
+  display: flex;
+  align-items: center;
+}
+
+.user-table td .yearGroup button.savebtn{
+  background-image: url('saveicon.svg');
+  background-repeat: no-repeat; 
+  background-size: contain; 
+  background-position: center;
+  width: 20px;
+  height: 20px; /* Add height to define the button size for the background */
+  font-size: 0.7rem;
+  padding: 0;
+  margin-left: 5px;
+  border: none;
+  background-color: white;
+  opacity: 0.5;
+}
+
+.user-table td .yearGroup button.savebtn:hover{
+  opacity: 0.7;
+}
+
+.user-table td .yearGroup button.savebtn:active{
+  opacity: 1;
+}
+
 
 .user-table select {
   background-color: #fff;
@@ -203,4 +251,72 @@ display: flex;
   background-size: 20px;
   background-repeat: no-repeat;
   background-position: center;
+}
+
+.modal-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 999;
+}
+
+.modal-content {
+  background: white;
+  padding: 20px;
+  border-radius: 8px;
+  max-width: 500px;
+  width: 100%;
+}
+
+.modal-content button{
+  border: 1px solid black;
+  background-color: black;
+  color: white;
+  border-radius: 0;
+  min-width: 80px;
+  font-size: 1.5rem;
+  font-family:"balboa";
+  font-weight: 400;
+  padding-left: 10px;
+  padding-right: 10px;
+  margin-bottom: 20px ;
+}
+
+@keyframes fadeIn {
+  from { opacity: 0; transform: translateY(-20px); }
+  to { opacity: 1; transform: translateY(0); }
+}
+
+/* Form styling */
+.modal-content .form-group {
+  margin-bottom: 15px;
+}
+
+.modal-content label {
+  font-family:"balboa";
+  font-weight: 700;
+  font-size: 0.9rem;
+  display: block;
+  text-align: left;
+  padding: 10px;
+  color: #888;
+}
+
+textarea {
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 0;
+  font-family:"balboa";
+  font-weight: 200;
+  font-size: 1.2rem;
+  height: 100px;
+  width: 90%;
+  resize: none;
+  opacity: 0.5;
 }
