--- a/client/src/App.css
+++ b/client/src/App.css
@@ -4,7 +4,7 @@
   font-weight: 400;
 
   color: black;
-  background-color:white;
+  background-color: white;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -31,12 +31,15 @@ body {
 }
 
 h1 {
+  font-family: "balboa";
   font-size: 3.2em;
+  font-weight: 700;
   line-height: 1.1;
+  text-transform: uppercase;
 }
 
-h2{
-  font-family:"balboa";
+h2 {
+  font-family: "balboa";
   font-weight: 200;
   font-size: 2.5rem;
   opacity: 0.2;
@@ -44,37 +47,152 @@ h2{
   margin-bottom: 0;
 }
 
-h3{
-  font-family:"balboa";
+h3 {
+  font-family: "balboa";
   font-weight: 700;
   font-size: 1rem;
 }
 
+h4 {
+  font-family: "balboa";
+  font-weight: 200;
+  font-size: 1.5rem;
+  line-height: 1.8rem;
+  opacity: 0.5;
+  text-align: start;
+  margin-bottom: 0;
+}
 
-header{
+header {
   width: 100%;
   display: flex;
   justify-content: space-between;
   align-items: flex-start;
-  font-family:"balboa";
+  font-family: "balboa";
   font-weight: 700;
   font-size: 1.5rem;
   text-transform: uppercase;
-  
 }
 
-header a{
+header a {
   color: black;
   text-decoration: none;
 }
 
-header #centerLinks{
+header #centerLinks {
   display: flex;
   justify-content: space-evenly;
   width: 50%;
 }
 
+.separatingLine {
+  background-color: black;
+  width: 100%;
+  height: 2px;
+  margin-top: 30px;
+  margin-bottom: 30px;
+}
 
+.truncate {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+/* -------------- COMMUNITY PAGE -------------- */
+
+#community h1 {
+  text-align: start;
+}
+
+#community .filterByYear {
+  display: flex;
+}
+
+#community .filterByYear ol {
+  display: flex;
+  list-style: none;
+}
+
+#community .filterByYear h3 {
+  padding: 2px 5px;
+}
+#community .filterByYear ol li {
+  border: 1px solid black;
+  padding: 2px 5px;
+  margin: 0 2px;
+  font-family: "balboa";
+  font-weight: 700;
+  font-size: 1rem;
+}
+
+#community .filterByYear ol li:hover {
+  color: gray;
+  cursor: pointer;
+}
+
+#community .filterByYear ol li.active {
+  background-color: black;
+  color: white;
+}
+
+#community .cardHolder {
+  display: flex;
+  margin-top: 30px;
+}
+
+#community .cardHolder .alumniCard {
+  border: 3px solid black;
+  width: 250px;
+  height: 350px;
+  display: flex;
+  margin: 10px;
+  padding: 10px 25px 10px 10px;
+  flex-direction: column;
+  justify-content: space-between;
+  box-sizing: border-box
+}
+
+#community .cardHolder .alumniCard .name {
+  font-family: "balboa-condensed";
+  font-weight: 700;
+  font-size: 2.5rem;
+  margin: 0;
+  padding: 0;
+  line-height: 2.6rem;
+  text-align: start;
+  height: 200px;
+}
+
+#community .cardHolder .alumniCard .bio {
+  font-family: "balboa";
+  font-weight: 400;
+  font-size: 1rem;
+  margin: 0;
+  padding: 0;
+  line-height: 1.1rem;
+  text-align: start;
+  height: 200px;
+}
+
+#community .cardHolder .alumniCard .footer {
+  display: flex;
+  justify-content: space-between;
+  font-family: "balboa";
+  color: #888;
+  font-weight: 200;
+  font-size: 0.8rem;
+}
+
+#community .cardHolder .alumniCard .footer .left{
+  text-align: start;
+}
+/* #community .cardHolder .alumniCard .footer .years{
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  width: 110px;
+} */
 /* -------------- ADMIN DASHBOARD PAGE -------------- */
 
 @keyframes gradientAnimation {
@@ -89,11 +207,11 @@ header #centerLinks{
   }
 }
 
-.constructionBanner{
+.constructionBanner {
   margin-top: 50px;
   width: 100%;
   height: 1.5rem;
-  background-color: #FCEE21;
+  background-color: #fcee21;
   color: black;
   position: relative;
 }
@@ -104,37 +222,37 @@ header #centerLinks{
   position: absolute;
   top: 50%;
   transform: translateY(-50%);
-width: 100px;
+  width: 100px;
   height: 1.5rem;
   background-size: contain;
   background-repeat: no-repeat;
 }
 
 .constructionBanner::before {
-  left: 0; 
-  background-image: url('/constructionlines.svg'); /* Replace with your left image path */
+  left: 0;
+  background-image: url("/constructionlines.svg"); /* Replace with your left image path */
 }
 
 .constructionBanner::after {
-  right: 0; 
+  right: 0;
   transform: translateY(-50%) scaleX(-1);
-  background-image: url('/constructionlines.svg'); /* Replace with your right image path */
+  background-image: url("/constructionlines.svg"); /* Replace with your right image path */
 }
 
-.addUsers{
+.addUsers {
   width: 100%;
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
 
-.addUsers button{
+.addUsers button {
   border: 1px solid black;
   background-color: white;
   border-radius: 0;
   min-width: 80px;
   font-size: 1.5rem;
-  font-family:"balboa";
+  font-family: "balboa";
   font-weight: 400;
 }
 
@@ -142,7 +260,7 @@ width: 100px;
   width: 100%;
   border-collapse: collapse;
   margin-top: 20px;
-  font-family:"balboa";
+  font-family: "balboa";
   font-weight: 400;
 }
 
@@ -155,11 +273,11 @@ width: 100px;
   border-bottom: 1px solid #e5e5e5;
 }
 
-.user-table th{
+.user-table th {
   width: 100px;
 }
 
-#adminUserTable.user-table th:last-child{
+#adminUserTable.user-table th:last-child {
   visibility: hidden;
 }
 
@@ -172,7 +290,7 @@ width: 100px;
   animation: gradientAnimation 15s ease infinite;
 } */
 
-.user-table td:first-child{
+.user-table td:first-child {
   text-align: left;
 }
 
@@ -183,10 +301,8 @@ width: 100px;
   text-align: start;
 }
 
-
-
 .user-table td:last-child {
-display: flex;
+  display: flex;
 }
 
 .user-table input[type="text"],
@@ -203,15 +319,15 @@ display: flex;
   /* appearance: none; Removes the default dropdown styling */
 }
 
-.user-table td .yearGroup{
+.user-table td .yearGroup {
   display: flex;
   align-items: center;
 }
 
-.user-table td .yearGroup button.savebtn{
-  background-image: url('saveicon.svg');
-  background-repeat: no-repeat; 
-  background-size: contain; 
+.user-table td .yearGroup button.savebtn {
+  background-image: url("saveicon.svg");
+  background-repeat: no-repeat;
+  background-size: contain;
   background-position: center;
   width: 20px;
   height: 20px; /* Add height to define the button size for the background */
@@ -223,14 +339,13 @@ display: flex;
   opacity: 0.5;
 }
 
-.user-table td .yearGroup button.savebtn:hover{
+.user-table td .yearGroup button.savebtn:hover {
   opacity: 0.7;
 }
 
-.user-table td .yearGroup button.savebtn:active{
+.user-table td .yearGroup button.savebtn:active {
   opacity: 1;
 }
-
 
 .user-table select {
   background-color: #fff;
@@ -247,7 +362,7 @@ display: flex;
 
 .register-circle.check {
   background-color: green;
-  background-image: url('check.svg');
+  background-image: url("check.svg");
   background-size: 20px;
   background-repeat: no-repeat;
   background-position: center;
@@ -274,23 +389,29 @@ display: flex;
   width: 100%;
 }
 
-.modal-content button{
+.modal-content button {
   border: 1px solid black;
   background-color: black;
   color: white;
   border-radius: 0;
   min-width: 80px;
   font-size: 1.5rem;
-  font-family:"balboa";
+  font-family: "balboa";
   font-weight: 400;
   padding-left: 10px;
   padding-right: 10px;
-  margin-bottom: 20px ;
+  margin-bottom: 20px;
 }
 
 @keyframes fadeIn {
-  from { opacity: 0; transform: translateY(-20px); }
-  to { opacity: 1; transform: translateY(0); }
+  from {
+    opacity: 0;
+    transform: translateY(-20px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
 }
 
 /* Form styling */
@@ -299,7 +420,7 @@ display: flex;
 }
 
 .modal-content label {
-  font-family:"balboa";
+  font-family: "balboa";
   font-weight: 700;
   font-size: 0.9rem;
   display: block;
@@ -312,7 +433,7 @@ textarea {
   padding: 10px;
   border: 1px solid #ccc;
   border-radius: 0;
-  font-family:"balboa";
+  font-family: "balboa";
   font-weight: 200;
   font-size: 1.2rem;
   height: 100px;
