--- a/client/src/App.css
+++ b/client/src/App.css
@@ -104,6 +104,11 @@ header .alumInitials {
   text-overflow: ellipsis;
 }
 
+.disabled {
+  opacity: 0.3;
+  cursor: not-allowed;
+}
+
 /* -------------- COMMUNITY PAGE -------------- */
 
 #community {
@@ -671,27 +676,30 @@ textarea {
   padding-left: 45px;
 }
 
-.alumData .exhibitions .exhibitionItem{
+.alumData .exhibitions .exhibitionItem {
   display: flex;
+  padding-bottom: 20px;
+  padding-top: 20px;
+  border-bottom: 1px dashed #888;
   /* justify-content: space-between; */
 }
 
-.alumData .exhibitions .exhibitionItem img{
+.alumData .exhibitions .exhibitionItem img {
   width: 200px;
 }
 
-.alumData .exhibitions .exhibitionItem .references{
+.alumData .exhibitions .exhibitionItem .references {
   width: 100%;
   padding-left: 20px;
 }
 
-.alumData .exhibitions .exhibitionItem .referenceItem, 
-.alumData .exhibitions .exhibitionItem .referenceInfo{
+.alumData .exhibitions .exhibitionItem .referenceItem,
+.alumData .exhibitions .exhibitionItem .referenceInfo {
   display: flex;
   align-items: center;
-  gap:10px;
+  gap: 10px;
 }
 
-.alumData .exhibitions .exhibitionItem .referenceItem{
+.alumData .exhibitions .exhibitionItem .referenceItem {
   justify-content: space-between;
 }
