--- a/client/src/App.css
+++ b/client/src/App.css
@@ -70,7 +70,7 @@ header {
   align-items: flex-start;
   font-family: "balboa";
   font-weight: 700;
-  font-size: 1.5rem;
+  font-size: 1.2rem;
   text-transform: uppercase;
 }
 
@@ -91,6 +91,7 @@ header .alumInitials {
 }
 
 header .underscore {
+  opacity: 0.3;
   text-decoration: underline;
 }
 
@@ -251,7 +252,7 @@ header .alumInitials.active {
   width: 600px;
   max-width: 80%;
   height: 80%;
-  border: 3px solid black;
+  border: 6px solid black;
   position: relative;
 }
 
@@ -287,6 +288,16 @@ header .alumInitials.active {
   font-size: 1rem;
   line-height: 1.1rem;
   width: 50%;
+}
+
+.modal-alumni-content .info-holder .about .bio {
+  font-family: "balboa";
+  font-weight: 400;
+  font-size: 1rem;
+  margin: 0;
+  padding: 0 0 20px 0;
+  line-height: 1.1rem;
+  text-align: start;
 }
 
 .modal-alumni-content .info-holder .about .personalLinks {
@@ -522,7 +533,7 @@ header .alumInitials.active {
   left: 0;
   width: 100%;
   height: 100%;
-  background: rgba(0, 0, 0, 0.5);
+  background: rgba(0, 0, 0, 0.75);
   display: flex;
   justify-content: center;
   align-items: center;
