--- a/client/src/App.css
+++ b/client/src/App.css
@@ -12,13 +12,19 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+html,
+body {
+  height: 100%;
+  margin: 0; /* Remove default margin */
+}
+
 #root {
   width: 100vw;
   margin: 0 0;
-  padding: 1rem 2rem;
   display: flex;
   text-align: center;
   flex-direction: column;
+  height: 100%;
 }
 
 body {
@@ -63,8 +69,12 @@ h4 {
   margin-bottom: 0;
 }
 
+.container {
+  flex: 1; /* This makes the main content take up all available space */
+  padding: 1rem 2rem 0;
+}
+
 header {
-  width: 100%;
   display: flex;
   justify-content: space-between;
   align-items: flex-start;
@@ -72,11 +82,16 @@ header {
   font-weight: 700;
   font-size: 1.2rem;
   text-transform: uppercase;
+  padding: 1rem 2rem 0;
 }
 
 header a {
   color: black;
   text-decoration: none;
+}
+
+header img {
+  width: 60px;
 }
 
 header #centerLinks {
@@ -125,6 +140,52 @@ header .alumInitials.active {
   font-weight: bold;
 }
 
+footer {
+  display: flex;
+  width: 100%;
+  min-height: 50px;
+  background-color: #000;
+  justify-content: center;
+  align-items: center;
+  margin-top: 50px;
+}
+
+footer h4 {
+  font-family: "balboa";
+  font-weight: 700;
+  font-size: 0.8rem;
+  text-transform: uppercase;
+  color: white;
+  margin-top: 2px;
+  opacity: 1;
+}
+
+/* -------------- LOGIN PAGE -------------- */
+
+.login {
+  margin-top: 200px;
+}
+
+.login input {
+  border: 1px solid black;
+  background-color: white;
+  border-radius: 0;
+  min-width: 80px;
+  font-size: 1.5rem;
+  font-family: "balboa";
+  font-weight: 400;
+}
+
+.login button {
+  border: 1px solid black;
+  background-color: white;
+  border-radius: 0;
+  min-width: 80px;
+  font-size: 1.5rem;
+  font-family: "balboa";
+  font-weight: 400;
+}
+
 /* -------------- COMMUNITY PAGE -------------- */
 
 #community {
@@ -142,6 +203,7 @@ header .alumInitials.active {
 #community .filterByYear ol {
   display: flex;
   list-style: none;
+  flex-wrap: wrap;
 }
 
 #community .filterByYear h3 {
@@ -150,10 +212,11 @@ header .alumInitials.active {
 #community .filterByYear ol li {
   border: 1px solid black;
   padding: 2px 5px;
-  margin: 0 2px;
+  margin: 2px 2px;
   font-family: "balboa";
   font-weight: 700;
   font-size: 1rem;
+  width: 33px;
 }
 
 #community .filterByYear ol li:hover {
@@ -249,11 +312,12 @@ header .alumInitials.active {
   background: white;
   padding: 40px;
   border-radius: 0px;
-  width: 600px;
+  width: 680px;
   max-width: 80%;
   height: 80%;
   border: 6px solid black;
   position: relative;
+  overflow: auto;
 }
 
 .modal-alumni-content .info-holder {
@@ -278,7 +342,7 @@ header .alumInitials.active {
 }
 
 .modal-alumni-content .info-holder .socials img {
-  width: 20px;
+  width: 30px;
 }
 
 .modal-alumni-content .info-holder .about {
@@ -326,7 +390,7 @@ header .alumInitials.active {
   margin: 0 20px 20px 0;
   /* border: 1px solid black; */
   width: 150px;
-  min-height: 250px;
+  /* min-height: 250px; */
   font-size: 0.8rem;
   /* flex: 0 0 auto; */
 }
@@ -342,14 +406,20 @@ header .alumInitials.active {
 
 .modal-alumni-content .school {
   position: absolute;
-  bottom: 10px;
+  top: 10px;
+  left: 50%;
+  width: 40%;
+  transform: rotate(0deg);
+  transform-origin: bottom left;
+  /* transform: translateX(50%); */
+  /* transform: translateY(-50%); */
   display: flex;
   gap: 10px;
   font-family: "balboa";
   opacity: 0.35;
   font-weight: 200;
   text-align: left;
-  font-size: 1rem;
+  font-size: 0.8rem;
 }
 
 /* -------------- ADMIN DASHBOARD PAGE -------------- */
@@ -546,6 +616,13 @@ header .alumInitials.active {
   border-radius: 8px;
   max-width: 500px;
   width: 100%;
+  max-height: 75%;
+  overflow-y: auto;
+}
+
+#exhibitionModal .modal-content {
+  max-width: 930px;
+  padding: 50px;
 }
 
 .modal-content button {
@@ -693,6 +770,17 @@ textarea {
 .alumData .exhibitions .exhibitionItem .referenceItem {
   height: 30px;
 }
+
+.alumData .exhibitions .exhibitionItem h4 {
+  margin-top: 0;
+  text-transform: capitalize;
+}
+
+.alumData .exhibitions .exhibitionItem p {
+  margin-top: 0;
+  text-transform: capitalize;
+}
+
 .alumData .exhibitions .exhibitionItem .referenceItem:first-of-type {
   padding-top: 10px;
 }
@@ -809,7 +897,8 @@ textarea {
 #addExhibitionForm .exhibition-list {
   display: flex;
   flex-wrap: wrap;
-  gap: 10px;
+  column-gap: 10px;
+  row-gap: 25px;
 }
 
 #addExhibitionForm .exhibition-list .exhibition-item {
