--- a/client/src/App.css
+++ b/client/src/App.css
@@ -87,7 +87,13 @@ header {
 
 header a {
   color: black;
+  opacity: 0.3;
   text-decoration: none;
+}
+
+header a:hover {
+  text-decoration: underline;
+  cursor: pointer;
 }
 
 header img {
@@ -103,10 +109,16 @@ header #centerLinks {
 header .alumInitials {
   text-transform: uppercase;
   filter: grayscale(1);
+  opacity: 0.3;
+}
+
+header .alumInitials:hover {
+  opacity: 1;
+  cursor: pointer;
 }
 
 header .underscore {
-  opacity: 0.3;
+  opacity: 1;
   text-decoration: underline;
 }
 
@@ -207,11 +219,13 @@ footer h4 {
   }
 }
 
-#community {
+#community,
+#announcements {
   padding-top: 10px;
 }
 
-#community h1 {
+#community h1,
+#announcements h1 {
   text-align: start;
 }
 
@@ -1084,6 +1098,150 @@ textarea {
   font-size: 1.5rem;
 }
 
+/* -------------- ANNOUNCEMENT PAGE -------------- */
+/* 
+Has its own CSS file called stylecards.css
+*/
+.announcement-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+}
+
+.create-announcement-button {
+  text-align: start;
+}
+
+.create-announcement-button button {
+  border: 1px solid black;
+  padding: 2px 5px;
+  margin: 2px 2px;
+  font-family: "balboa";
+  font-weight: 700;
+  font-size: 1.2rem;
+  width: fit-content;
+  background-color: white;
+}
+
+.create-announcement-button button:hover {
+  background-color: black;
+  color: white;
+  cursor: pointer;
+}
+
+.newAnnouncementPage form button {
+  background-color: white;
+  color: black;
+}
+
+.newAnnouncementPage form button:hover {
+  background-color: black;
+  color: white;
+}
+
+/* -------------- NEW ANNOUNCEMENT PAGE -------------- */
+
+.newAnnouncementPage {
+  margin-top: 50px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.newAnnouncementPage button.cta-btn {
+  border: 1px solid black;
+  background-color: #000;
+  color: #fff;
+  padding: 2px 10px;
+  cursor: pointer;
+  margin: 0 2px;
+  font-family: "balboa";
+  font-weight: 700;
+  text-transform: uppercase;
+}
+
+.newAnnouncementPage button {
+  border: 1px solid black;
+  background-color: white;
+  padding: 2px 10px;
+  margin: 0 2px;
+  color: black;
+  font-family: "balboa";
+  font-weight: 700;
+  font-size: 1.2rem;
+}
+
+.newAnnouncementPage .preview-container {
+  padding: 10px 20px;
+  background-color: lightgray;
+  margin: 10px 0 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.newAnnouncementPage .event-card {
+  margin: 0;
+  margin-bottom: 20px;
+}
+
+#newAnnouncementForm {
+  width: 80%;
+  max-width: 900px;
+}
+
+#newAnnouncementForm .newAnnouncement-table {
+  width: 100%;
+}
+
+#newAnnouncementForm input,
+#newAnnouncementForm select {
+  overflow: hidden;
+  width: 100%;
+  padding: 5px;
+  font-size: 1rem;
+  font-family: inherit;
+  border: 1px solid #000;
+  box-sizing: border-box;
+  background-color: #fff;
+}
+
+#newAnnouncementForm h5 {
+  padding: 10px;
+  font-size: 1.1rem;
+  font-weight: bold;
+  text-align: start;
+  margin: 0;
+}
+
+#newAnnouncementForm label {
+  font-size: 1rem;
+}
+
+.emailAnnouncementPage h2 {
+  text-align: center;
+  color: green;
+  opacity: 1;
+}
+
+.emailAnnouncementPage-buttons {
+  display: flex;
+  justify-content: center;
+  gap: 10px;
+}
+
+.emailAnnouncementPage button {
+  border: 1px solid black;
+  background-color: white;
+  padding: 2px 10px;
+  margin: 0 2px;
+  color: black;
+  font-family: "balboa";
+  font-weight: 700;
+  font-size: 1.2rem;
+}
+
 /* -------------- 888888888888888888888 -------------- */
 /* -------------- 888888888888888888888 -------------- */
 /* -------------- RESPONSIVE FOR MOBILE -------------- */
@@ -1150,6 +1308,7 @@ textarea {
     height: fit-content;
     max-height: 65%;
   }
+
   .modal-alumni-content .info-holder {
     flex-direction: column;
   }
@@ -1184,5 +1343,9 @@ textarea {
     display: block;
     overflow-x: auto;
     white-space: nowrap;
+  }
+
+  .modal-mass-email-content {
+    width: 80%;
   }
 }
